--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "satoru-sdk",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "type": "module",
   "sideEffects": false,
@@ -34,7 +34,9 @@
     "type-check": "tsc --noEmit",
     "tree-shake-check": "pnpm dlx agadoo",
     "generate:abis-index": "tsx ./src/scripts/generateAbisIndex.ts",
-    "prebuild": "pnpm run generate:abis-index",
+    "generate:utils-index": "tsx ./src/scripts/generateUtilsIndex.ts",
+    "generate": "pnpm run --parallel --aggregate-output --reporter-hide-prefix '/^generate:(.+)$/'",
+    "prebuild": "pnpm run generate",
     "build": "tsup"
   },
   "keywords": [],
@@ -46,6 +48,9 @@
     "just-random": "^3.2.0",
     "starknet": "^6.12.1",
     "typescript": "^5.5.4"
+  },
+  "peerDependencies": {
+    "abi-wan-kanabi": "^2.2.2"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.3.0",
