--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wolfy-sdk",
-  "version": "1.4.2",
+  "version": "1.4.3",
   "description": "",
   "type": "module",
   "sideEffects": false,
@@ -161,7 +161,7 @@
     "generate": "pnpm run --parallel --aggregate-output --reporter-hide-prefix '/^generate:(.+)$/'",
     "prebuild": "pnpm run generate",
     "build": "tsup",
-    "prepublishOnly": "pnpm run build --no-sourcemap --minify",
+    "prepublishOnly": "pnpm run build --no-sourcemap --minify --no-metafile",
     "prepare": "husky"
   },
   "keywords": [],
@@ -169,17 +169,16 @@
   "license": "ISC",
   "packageManager": "pnpm@9.14.4",
   "dependencies": {
-    "abi-wan-kanabi": "2.2.2",
     "just-random": "^3.2.0",
     "p-retry": "^6.2.1",
-    "p-timeout": "^6.1.3",
-    "starknet": "^6.20.3",
-    "starknet_multicall": "^1.0.4",
+    "p-timeout": "^6.1.4",
     "tiny-invariant": "^1.3.3"
   },
   "peerDependencies": {
     "abi-wan-kanabi": "2.2.2",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.3",
+    "starknet": "^6.20.3",
+    "starknet_multicall": "^1.0.5"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.6.0",
