--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wolfy-sdk",
-  "version": "1.4.4",
+  "version": "1.4.5",
   "description": "",
   "type": "module",
   "sideEffects": false,
@@ -12,7 +12,6 @@
     "type": "git",
     "url": "https://github.com/dew-labs/wolfy-sdk"
   },
-  "main": "dist/index.cjs",
   "module": "dist/index.js",
   "types": "./dist/index.d.ts",
   "exports": {
@@ -20,120 +19,72 @@
       "import": {
         "types": "./dist/index.d.ts",
         "default": "./dist/index.js"
-      },
-      "require": {
-        "types": "./dist/index.d.cts",
-        "default": "./dist/index.cjs"
       }
     },
     "./abis/index": {
       "import": {
         "types": "./dist/abis/index.d.ts",
         "default": "./dist/abis/index.js"
-      },
-      "require": {
-        "types": "./dist/abis/index.d.cts",
-        "default": "./dist/abis/index.cjs"
       }
     },
     "./chains": {
       "import": {
         "types": "./dist/chains.d.ts",
         "default": "./dist/chains.js"
-      },
-      "require": {
-        "types": "./dist/chains.d.cts",
-        "default": "./dist/chains.cjs"
       }
     },
     "./contracts": {
       "import": {
         "types": "./dist/contracts.d.ts",
         "default": "./dist/contracts.js"
-      },
-      "require": {
-        "types": "./dist/contracts.d.cts",
-        "default": "./dist/contracts.cjs"
       }
     },
     "./dataStore": {
       "import": {
         "types": "./dist/dataStore.d.ts",
         "default": "./dist/dataStore.js"
-      },
-      "require": {
-        "types": "./dist/dataStore.d.cts",
-        "default": "./dist/dataStore.cjs"
       }
     },
     "./events": {
       "import": {
         "types": "./dist/events.d.ts",
         "default": "./dist/events.js"
-      },
-      "require": {
-        "types": "./dist/events.d.cts",
-        "default": "./dist/events.cjs"
       }
     },
     "./multicall": {
       "import": {
         "types": "./dist/multicall.d.ts",
         "default": "./dist/multicall.js"
-      },
-      "require": {
-        "types": "./dist/multicall.d.cts",
-        "default": "./dist/multicall.cjs"
       }
     },
     "./order": {
       "import": {
         "types": "./dist/order.d.ts",
         "default": "./dist/order.js"
-      },
-      "require": {
-        "types": "./dist/order.d.cts",
-        "default": "./dist/order.cjs"
       }
     },
     "./roles": {
       "import": {
         "types": "./dist/roles.d.ts",
         "default": "./dist/roles.js"
-      },
-      "require": {
-        "types": "./dist/roles.d.cts",
-        "default": "./dist/roles.cjs"
       }
     },
     "./rpcProviders": {
       "import": {
         "types": "./dist/rpcProviders.d.ts",
         "default": "./dist/rpcProviders.js"
-      },
-      "require": {
-        "types": "./dist/rpcProviders.d.cts",
-        "default": "./dist/rpcProviders.cjs"
       }
     },
     "./utils/index": {
       "import": {
         "types": "./dist/utils/index.d.ts",
         "default": "./dist/utils/index.js"
-      },
-      "require": {
-        "types": "./dist/utils/index.d.cts",
-        "default": "./dist/utils/index.cjs"
       }
     },
     "./websocketProvider": {
       "import": {
         "types": "./dist/websocketProvider.d.ts",
         "default": "./dist/websocketProvider.js"
-      },
-      "require": {
-        "types": "./dist/websocketProvider.d.cts",
-        "default": "./dist/websocketProvider.cjs"
       }
     }
   },
@@ -144,7 +95,7 @@
     "base:lint:script": "eslint --cache",
     "lint:script": "pnpm run base:lint:script --color $([ \"$PRETTY_FORMAT\" == \"true\" ] && echo \"--format=pretty\")",
     "lint:pub": "pnpm dlx publint",
-    "lint": "pnpm run --parallel --aggregate-output --reporter-hide-prefix '/^lint:(.+)$/'",
+    "lint": "pnpm run '/^lint:(.+)$/' --parallel --aggregate-output --reporter-hide-prefix",
     "fix": "pnpm run lint --fix",
     "test": "vitest",
     "test:changed": "pnpm run test --changed",
@@ -153,12 +104,12 @@
     "test:update-snapshot": "pnpm run test -u",
     "type-check": "tsc --noEmit",
     "tree-shake-check": "pnpm dlx agadoo",
-    "check": "rm -rf .eslintcache && rm -rf tsconfig.tsbuildinfo && CI=true pnpm run --parallel --aggregate-output --reporter-hide-prefix '/^(fix|type-check|test)$/'",
+    "check": "rm -rf .eslintcache && rm -rf tsconfig.tsbuildinfo && CI=true pnpm run '/^(fix|type-check|test)$/' --parallel --aggregate-output --reporter-hide-prefix",
     "generate:index": "tsx ./src/scripts/generateIndex.ts",
     "generate:abis-index": "tsx ./src/scripts/generateAbisIndex.ts",
     "generate:utils-index": "tsx ./src/scripts/generateUtilsIndex.ts",
     "generate:package-json": "tsx ./src/scripts/updatePackageJson.ts",
-    "generate": "pnpm run --parallel --aggregate-output --reporter-hide-prefix '/^generate:(.+)$/'",
+    "generate": "pnpm run '/^generate:(.+)$/' --parallel --aggregate-output --reporter-hide-prefix",
     "prebuild": "pnpm run generate",
     "build": "tsup",
     "prepublishOnly": "pnpm run build --no-sourcemap --minify --no-metafile",
@@ -167,7 +118,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "packageManager": "pnpm@10.6.1",
+  "packageManager": "pnpm@10.10.0",
   "dependencies": {
     "just-random": "^3.2.0",
     "p-retry": "^6.2.1",
@@ -176,59 +127,59 @@
   },
   "peerDependencies": {
     "abi-wan-kanabi": "2.2.2",
-    "typescript": "^5.8.2",
-    "starknet": "^6.23.1",
-    "starknet_multicall": "^1.0.5"
+    "starknet": "^6.24.1",
+    "starknet_multicall": "^1.0.5",
+    "typescript": "^5.8.3"
   },
   "devDependencies": {
-    "@commitlint/cli": "^19.7.1",
-    "@eslint-community/eslint-plugin-eslint-comments": "^4.4.1",
-    "@eslint-react/eslint-plugin": "^1.31.0",
-    "@eslint/eslintrc": "^3.3.0",
-    "@eslint/js": "^9.21.0",
+    "@commitlint/cli": "^19.8.1",
+    "@eslint-community/eslint-plugin-eslint-comments": "^4.5.0",
+    "@eslint-react/eslint-plugin": "^1.49.0",
+    "@eslint/compat": "^1.2.9",
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.26.0",
     "@total-typescript/ts-reset": "^0.6.1",
-    "@types/eslint__js": "^9.14.0",
-    "@types/node": "^22.13.9",
-    "@typescript-eslint/parser": "^8.26.0",
-    "@vitest/coverage-v8": "^3.0.8",
-    "@vitest/ui": "^3.0.8",
+    "@types/node": "^22.15.17",
+    "@typescript-eslint/parser": "^8.32.0",
+    "@vitest/coverage-v8": "^3.1.3",
+    "@vitest/ui": "^3.1.3",
     "better-commits": "^1.16.1",
-    "commitlint": "^19.7.1",
+    "commitlint": "^19.8.1",
     "commitlint-config-gitmoji": "^2.3.1",
-    "eslint": "^9.21.0",
+    "eslint": "^9.26.0",
     "eslint-config-flat-gitignore": "^2.1.0",
-    "eslint-config-prettier": "^10.0.2",
+    "eslint-config-prettier": "^10.1.5",
     "eslint-formatter-pretty": "^6.0.1",
-    "eslint-import-resolver-typescript": "^3.8.3",
-    "eslint-plugin-depend": "^0.12.0",
+    "eslint-import-resolver-typescript": "^4.3.4",
+    "eslint-plugin-depend": "^1.2.0",
     "eslint-plugin-deprecation": "^3.0.0",
     "eslint-plugin-exception-handling": "^1.5.4",
-    "eslint-plugin-import-x": "^4.6.1",
+    "eslint-plugin-import-x": "^4.11.1",
     "eslint-plugin-jest-formatting": "^3.1.0",
-    "eslint-plugin-jsdoc": "^50.6.3",
-    "eslint-plugin-jsonc": "^2.19.1",
+    "eslint-plugin-jsdoc": "^50.6.13",
+    "eslint-plugin-jsonc": "^2.20.0",
     "eslint-plugin-no-barrel-files": "^1.2.1",
     "eslint-plugin-no-only-tests": "^3.3.0",
     "eslint-plugin-no-relative-import-paths": "^1.6.1",
     "eslint-plugin-no-secrets": "^2.2.1",
     "eslint-plugin-no-use-extend-native": "^0.7.2",
-    "eslint-plugin-prettier": "^5.2.3",
+    "eslint-plugin-prettier": "^5.4.0",
     "eslint-plugin-promise": "^7.2.1",
     "eslint-plugin-regexp": "^2.7.0",
     "eslint-plugin-security": "^3.0.1",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-sonarjs": "^3.0.2",
     "eslint-plugin-ssr-friendly": "^1.3.0",
-    "eslint-plugin-unicorn": "^57.0.0",
+    "eslint-plugin-unicorn": "^58.0.0",
     "eslint-plugin-vitest": "^0.5.4",
-    "globals": "^16.0.0",
+    "globals": "^16.1.0",
     "husky": "^9.1.7",
-    "lint-staged": "^15.4.3",
+    "lint-staged": "^16.0.0",
     "prettier": "^3.5.3",
     "tsup": "^8.4.0",
-    "tsx": "^4.19.3",
-    "typescript": "^5.8.2",
-    "typescript-eslint": "^8.26.0",
-    "vitest": "^3.0.8"
+    "tsx": "^4.19.4",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.32.0",
+    "vitest": "^3.1.3"
   }
 }
