--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wolfy-sdk",
-  "version": "1.4.5",
+  "version": "2.0.0",
   "description": "",
   "type": "module",
   "sideEffects": false,
@@ -127,8 +127,8 @@
   },
   "peerDependencies": {
     "abi-wan-kanabi": "2.2.2",
-    "starknet": "^6.24.1",
-    "starknet_multicall": "^1.0.5",
+    "starknet": "^7.2.0",
+    "starknet_multicall": "^2.0.0",
     "typescript": "^5.8.3"
   },
   "devDependencies": {
@@ -142,6 +142,7 @@
     "@types/node": "^22.15.17",
     "@typescript-eslint/parser": "^8.32.0",
     "@vitest/coverage-v8": "^3.1.3",
+    "@vitest/eslint-plugin": "^1.1.44",
     "@vitest/ui": "^3.1.3",
     "better-commits": "^1.16.1",
     "commitlint": "^19.8.1",
@@ -171,7 +172,6 @@
     "eslint-plugin-sonarjs": "^3.0.2",
     "eslint-plugin-ssr-friendly": "^1.3.0",
     "eslint-plugin-unicorn": "^58.0.0",
-    "eslint-plugin-vitest": "^0.5.4",
     "globals": "^16.1.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.0.0",
