--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wolfy-sdk",
-  "version": "2.1.0",
+  "version": "2.1.1",
   "description": "",
   "type": "module",
   "sideEffects": false,
@@ -121,6 +121,7 @@
   "packageManager": "pnpm@10.10.0",
   "dependencies": {
     "just-random": "^3.2.0",
+    "klona": "^2.0.6",
     "p-retry": "^6.2.1",
     "p-timeout": "^6.1.4",
     "tiny-invariant": "^1.3.3"
@@ -171,6 +172,7 @@
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-sonarjs": "^3.0.2",
     "eslint-plugin-ssr-friendly": "^1.3.0",
+    "eslint-plugin-tsdoc": "^0.4.0",
     "eslint-plugin-unicorn": "^58.0.0",
     "globals": "^16.1.0",
     "husky": "^9.1.7",
